[package]
name = "ipsae-core"
version = "0.1.0"
edition = "2021"
description = "markdown parser for DIY lover"
license = "MIT"
repository = "https://github.com/huskyhoochu/ipsae-core"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1"
